# cinematch

./: .agents  .env.example  .gitignore  .mise.toml  CLAUDE.md  CONTRIBUTING.md  README.md  backup-instructions.md  docker-compose.deps.yml  docker-compose.yml  hello.txt  justfile
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  discussion.md  discussion.yml  request_access.md  request_access.yml
.github/workflows/: auto-approve-backlog.yml  auto-merge-backlog.yml  ci-cd.yml  destroy-preview.yml
.mise/: README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  justfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6c746b59cf94_fix_participants_unique_constraint.py  6e49429586cd_fix_provider_ids_data_for_existing_rooms.py  81f153f63751_add_provider_ids_for_multi_provider_support.py  a1b2c3d4e5f6_add_movie_availability_table.py  a1b2c3d4e5f6_add_tmdb_fields_and_cache.py  a1b2c3d4e5f6_add_tmdb_fields_to_movies.py  a1b2c3d4e5f6_fix_participant_session_id_unique_constraint.py  a1b2c3d4e5f6_fix_participant_session_unique_constraint.py  a1b2c3d4e5f7_fix_provider_ids_json_handling_in_.py  b23a4f49a125_add_missing_movie_columns.py  b2c3d4e5f6a1_ensure_provider_ids_data_integrity.py  b3c8f1a2d9e4_add_clerk_user_id_to_participants.py  cd92ff099504_add_user_accounts.py  cdc82f99bace_initial_migration_with_room_participant_.py  e5d9a3b1c4f2_add_region_and_provider_id_to_rooms.py
backend/app/: auth.py  config.py  database.py  main.py  migrations.py  models.py  schemas.py
backend/app/data/: movies.json
backend/app/routers/: auth.py  movies.py  providers.py  rooms.py  users.py  votes.py
backend/app/services/: __init__.py  auth_service.py  tmdb.py
backend/docs/backlog/done/: 00011-setup-local-dev.md
backend/migrations/: env.py
backend/migrations/versions/: 31e6bde99821_initial_migration_with_room_participant_.py
backend/scripts/: docker-entrypoint.sh  migrate_sqlite_to_postgres.py  stamp_database.py
backend/tests/: test_api.py  test_auth.py  test_match_detection.py  test_match_notification.py  test_matching_bug.py  test_movie_filtering.py  test_multi_provider.py  test_multi_room_session.py  test_room_participation.py  test_rooms.py  test_tmdb_client.py  test_tmdb_service.py  test_users.py
backend/tests/integration/: conftest.py  test_migrations.py
backend/tests/integration/test_migrations/: test_initial_migration.py
backend/tests/integration/test_persistence/: test_room_repository.py
docs/: SECURITY.md  conventions.md
docs/architecture/: overview.md
docs/conversations/: 2025-02-17-initial-setup.md
docs/product/: value-proposition.md
frontend/: .dockerignore  .env.example  Dockerfile  jest.config.js  justfile  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
operations/: justfile  main.tf  outputs.tf  variables.tf
operations/00-foundation/: cert.tf  ecr.tf  ecs.tf  justfile  main.tf  outputs.tf  providers.tf  variables.tf  vpc.tf
operations/01-service/: alb.tf  data.tf  ecs-cluster.tf  ecs-services.tf  iam.tf  justfile  locals.tf  logs.tf  main.tf  outputs.tf  providers.tf  rds.tf  tfplan  (+5 more)
scripts/: install-hooks.sh
(+71 files in other folders)
